--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,2 +1,2 @@
 FROM httpd:2.4
-COPY ./index.html /usr/local/apache2/htdocs/index.html
+COPY ./webapp/index.html /usr/local/apache2/htdocs/index.html
