--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,2 +1,2 @@
 FROM httpd:2.4
-COPY ./webapp/index.html /usr/local/apache2/htdocs/index.html
+COPY /var/jenkins_home/workspace/CICDpipe/webapp/ /usr/local/apache2/htdocs/index.html
